# goit-pythonweb-hw-10

./: .env.example  README.md  main.py  pyproject.toml
migrations/versions/: 659e3852a5b1_update_models.py  9339a9e17423_add_user_id_column_to_contacts.py  c0ac7a6f61b2_update_models.py  d8c64410a789_init.py  d9e9f3e04856_update_models.py  ea083fdb24b4_add_to_model_user_filed_confirmed.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
